# nephelios-cli

./: .env.example  CONTRIBUTING.MD  Cargo.toml  README.MD
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: main.rs
src/commands/: create.rs  down.rs  mod.rs  remove.rs  start.rs  stop.rs  up.rs
src/docker/: mod.rs  nephelios_service.rs
src/docker/volumes/: mod.rs  nephelios_volume.rs
src/tests/: cli.rs
src/types/: cli.rs
src/utils/: spinner.rs
