[package]
name = "nephelios-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
